--- a/catalog.html
+++ b/catalog.html
@@ -5,12 +5,12 @@
   <title>Седона</title>
 </head>
 <body>
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html">
+  <header>
+    <nav>
+      <a clmain-header-logo" href="index.html">
         <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
       </a>
-      <ul class="site-navigation">
+      <ul>
         <li><a href="info.html">Информация</a></li>
         <li><a href="photo.html">Фото и видео</a></li>
         <li><a href="map.html">Карта штата</a></li>
@@ -19,93 +19,89 @@
     </nav>
   </header>
   <main>
-    <section class="filters">
-      <h2 class="visually-hidden">Фильтр отелей</h2>
+    <section>
+      <h2>Фильтр отелей</h2>
       <!-- Здесь будет форма -->
-      <ul class="sorting">
+      <h3>Найдено: 3</h2>
+      <span>Сортировка:</span>
+      <ul>
         <li>
-          <h3>Найдено: 3</h2>
-        </li>
-        <li class="sort">
-          <span>Сортировка:</span>
-        </li>
-        <li class="price-current">
           <span>По цене</span>
         </li>
-        <li class="type">
+        <li>
           <span>По типу</span>
         </li>
-        <li class="rating">
-          <span class="top">По рейтингу</span>
+        <li>
+          <span>По рейтингу</span>
         </li>
-        <li class="triangles">
+        <li>
           <img src="img/icon-down-dir.svg">
           <img src="img/icon-up-dir.svg">
         </li>
       </ul>
     </section>
-    <section class="conteiner">
-      <h2 class="visually-hidden">Список отелей</h2>
-      <ul class="hotel-list">
-      <li class="hotel1">
+    <section>
+      <h2>Список отелей</h2>
+      <ul>
+      <li>
         <a href="">
-          <img src="img/amara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
+          <img src="img/аmara.jpg" width="135" height="90" alt="Вид на гостиницу Amara Resort & spa">
         </a>
         <h3>
           <a href="">Amara Resort & spa</a>
         </h3>
-        <span class="type-house">Гостиница</span>
-        <span class="prise">От 4000 р.</span>
-        <a class="button" href="">Подробнее</a>
-        <a class="button-booking" href="">Забронировать</a>
+        <span>Гостиница</span>
+        <span>От 4000 р.</span>
+        <a href="">Подробнее</a>
+        <a href="">Забронировать</a>
         <img src="img/star.svg">
-        <span class="rating">Рейтинг: 8,5<span>
+        <span>Рейтинг: 8,5<span>
       </li>
-      <li class="hotel2">
+      <li>
         <a href="">
           <img src="img/desert.jpg" width="135" height="90" alt="Вид на мотель Desert Quail Inn">
         </a>
         <h3>
           <a href="">Desert Quail Inn</a>
         </h3>
-        <span class="type-house">Мотель</span>
-        <span class="prise">От 3000 р.</span>
-        <a class="button" href="">Подробнее</a>
-        <a class="button-booking" href="">Забронировать</a>
+        <span>Мотель</span>
+        <span>От 3000 р.</span>
+        <a href="">Подробнее</a>
+        <a href="">Забронировать</a>
         <img src="img/star.svg">
-        <span class="rating">Рейтинг: 8,9</span>
+        <span>Рейтинг: 8,9</span>
       </li>
-      <li class="hotel3">
+      <li>
         <a href="">
-          <img src="img/desert.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
+          <img src="img/villas.jpg" width="135" height="90" alt="Вид на апартаменты Villas at Poco Diablo">
         </a>
         <h3>
           <a href="">Villas at Poco Diablo</a>
         </h3>
-        <span class="type-house">Апартаменты</span>
-        <span class="prise">От 2000 р.</span>
-        <a class="button" href="">Подробнее</a>
-        <a class="button-booking" href="">Забронировать</a>
+        <span>Апартаменты</span>
+        <span>От 2000 р.</span>
+        <a href="">Подробнее</a>
+        <a href="">Забронировать</a>
         <img src="img/star.svg">
-        <span class="rating">Рейтинг: 9,2</span>
+        <span>Рейтинг: 9,2</span>
       </li>
       </ul>
     </section>
   </main>
-  <footer class="main-footer">
-    <p class="visit">#Visitsedona</p>
-    <p class="tel">Тел:
-      <a href="tel:+7(495)666-02-66">
+  <footer>
+    <p>#Visitsedona</p>
+    <p>Тел:
+      <a href="tel:+74956660266">+7(495)666-02-66</a>
     </p>
-    <div class="footer-social">
+    <div>
       <ul>
-        <li><a class="social-button" href="">img/twitter</a></li>
-        <li><a class="social-button" href="">img/fb-icon</a></li>
-        <li><a class="social-button" href="">img/youtube</a></li>
+        <li><a href=""><img src="img/twitter.svg" alt="Твиттер"></a></li>
+        <li><a href=""><img src="img src="img/fb-icon.svg" alt="Фейсбук"></a></li>
+        <li><a href=""><img src="img src="img/youtube.svg" alt="Ютуб"></a></li>
       </ul>
     </div>
-    <p class="footer-copyright">
-    <span>Websait by</span>
+    <p>
+    <span>Website by</span>
       <a href="https://htmlacademy.ru/intensive/htmlcss">
         <img src="img/logo-htmlacademy.svg" width="" height="" alt="Логотип HTML Academy">
       </a>
