--- a/catalog.html
+++ b/catalog.html
@@ -174,9 +174,9 @@
           </div>
           <div class="container">
             <ul class="footer-social">
-              <li><a class="social-button" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
-              <li><a class="social-button" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
-              <li><a class="social-button" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
+              <li><a class="social-button social-tw" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
+              <li><a class="social-button social-fb" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+              <li><a class="social-button social-you" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
             </ul>
           </div>
           <div class="container">
