--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main class="container">
     <div class="wrapper wrapper-header-color">
     <section class="main-title">
-      <img src="img/intro-welcome.svg" width="1200" height="553" alt="Заставка Седоны">
+      <img src="img/intro-welcome.svg" width="1200" height="509" alt="Заставка Седоны">
     </section>
     <article class="about">
       <div class="box-title">
@@ -37,17 +37,17 @@
         <h2 class="visually-hidden">Список причин</h2>
         <ol class="reason-list">
           <li class="reason-item">
+            <img class="reason-item-image" src="img/flag.jpg" width="800" height="256" alt="Фото Седоны">
             <div class="reason-item-blue">
               <h3 class="reason-content-item-title">Настоящий городок</h3>
               <span class="reason-item-number">- №1 -</span>
               <p class="reason-item-text">Седона не аттракцион для туристов, там течет настоящая жизнь</p>
             </div>
-            <img class="reason-item-image" src="img/flag.jpg" width="800" height="256" alt="Фото Седоны">
           </li>
           <li>
             <div class="reason-content">
+              <h2 class="visually-hidden">Сервис Седоны</h2>
               <ul class="reason-content-list">
-                <h2 class="visually-hidden">Сервис Седоны</h2>
                 <li class="reason-content-item">
                   <div class="reason-item-white">
                     <img class="reason-content-item-icon" src="img/icon-1.svg" width="75" height="76" alt="Жилье">
@@ -57,17 +57,15 @@
                 </li>
                 <li class="reasons-content-item">
                   <div class="reason-item-white">
-                    <img class="reason-content-item-icon" src="img/icon-2.svg" width="77" height="70" alt="Еда">
+                    <img class="reason-content-item-icon" src="img/icon-3.svg" width="77" height="70" alt="Еда">
                     <span class="reason-content-item-title">Еда</span>
                     <p class="reason-content-item-text">Всегда заказывайте фирменный бургер,вы не разочаруетесь!</p>
                   </div>
                 </li>
                 <li class="reason-content-item">
-                  <div class="reason-item-white">
-                    <img class="reason-content-item-icon" src="img/icon-3.svg" width="64" height="76" alt="Сувениры">
-                    <span class="reason-content-item-title">Сувениры</span>
-                    <p class="reason-content-item-text">Не только китайского, но и местного производства</p>
-                  </div>
+                  <img class="reason-content-item-icon" src="img/icon-2.svg" width="64" height="76" alt="Сувениры">
+                  <span class="reason-content-item-title">Сувениры</span>
+                  <p class="reason-content-item-text">Не только китайского, но и местного производства</p>
                 </li>
               </ul>
             </div>
@@ -88,7 +86,7 @@
           <li class="reasons-item">
             <h3 class="reason-content-item-title">Красивая дорога</h3>
             <span class="reason-item-number">- №4 -</span>
-            <p class="reason-item-text">Ехать в Седону ихз Лас-Вегаса совсем не скучно!</p>
+            <p class="reason-item-text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="reasons-item">
             <h3 class="reason-content-item-title">Мало туристов</h3>
@@ -101,7 +99,7 @@
     <section class="order-question">
       <div class="container">
         <h2 class="order-question-title">Заинтересовались?</h2>
-        <p class="order-question-text">Укажите предполагаемые даты поездки, и мы покажем лучшие предложения гостиниц в Седоне</p>
+        <p class="order-question-text">Укажите предполагаемые даты поездки,<br> и мы покажем лучшие предложения гостиниц в Седоне</p>
         <button class="order-question-bottom" type="button">Поиск гостиницы в Седоне</button>
       </div>
       <div class="order-container">
@@ -111,12 +109,12 @@
       <div class="form-container">
         <form class="order-form" action="https://echo.htmlacademy.ru" method="post">
           <p class="order-date">
-            <label class="order-title" for="appointment-data">Дата заезда</label>
+            <label class="order-title" for="appointment-data">Дата заезда:</label>
             <input class="order-text" type="text" id="appointment-data" name="date" placeholder="24 апреля 2017">
             <buttom class="order-botton-calendar" type="button"><img src="img/calendar.svg" alt="Календарь"></button>
           </p>
           <p class="order-date">
-            <label class="order-title" for="departure-data">Дата выезда</label>
+            <label class="order-title" for="departure-data">Дата выезда:</label>
             <input class="order-text" type="text" id="departure-data" name="date" placeholder="4 июля 2017">
             <buttom class="order-botton-calendar"><img src="img/calendar.svg" alt="Календарь"></button>
           </p>
@@ -125,7 +123,7 @@
             <button class="order-botton-edit" type="button">-</button>
             <input class="order-count-value" type="number" id="adults" value="2">
             <button class="order-botton-edit" type="button">+</button>
-            <label class="order-title" for="child">Дети:</span>
+            <label class="order-title" for="child">Дети:</label>
             <button class="order-botton-edit" type="button">-</button>
             <input class="order-count-value" type="number" id="child" value="0">
             <button class="order-botton-edit" type="button">+</button>
@@ -145,23 +143,19 @@
             <a href="tel:+74956660266">+7(495)666-02-66</a>
           </p>
         </div>
-        <div class="container">
-          <ul class="footer-social">
-            <li><a class="social-button" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
-            <li><a class="social-button" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
-            <li><a class="social-button" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
-          </ul>
-        </div>
-        <div class="container">
-          <p>
-            <span class="footer-copyright">Website by</span>
-            <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
-              <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
-            </a>
-          </p>
-        </div>
+        <ul class="footer-social">
+          <li><a class="social-button social-tw" href=""><img src="img/twitter.svg" width="17" height="15" alt="Твиттер"></a></li>
+          <li><a class="social-button social-fb" href=""><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+          <li><a class="social-button social-you" href=""><img src="img/youtube.svg" width="20" height="16" alt="Ютуб"></a></li>
+        </ul>
       </div>
+      <p class="footer-copyright">
+        Website by
+        <a class="footer-logo" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-htmlacademy.svg" width="115" height="41" alt="Логотип HTML Academy">
+        </a>
+      </p>
     </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
