--- a/catalog.html
+++ b/catalog.html
@@ -69,8 +69,8 @@
                   <div class="filter-column-3">
                     <b class="filter-title column-3">Стоимость услуги в сутки (Р):</b>
                     <div class="filter-price">
-                      <label class="min-price">от <input type="text" name="min-price" value="0"></label>
-                      <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
+                      <label class="min-price">от <input type="number" name="min-price" value="0"></label>
+                      <label class="max-price">до <input type="number" name="max-price" value="3000"></label>
                     </div>
                     <div class="filter-range">
                       <div class="scale">
