--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
           <p class="order-question-text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <button class="order-question-button" type="button">Поиск гостиницы в Седоне</button>
         </div>
-        <div class="order-container">
+        <div class="order-container map">
           <h2 class="visually-hidden">Забронировать отель</h2>
-          <img class="order-image" src="img/map.png" width="1200" height="594" alt="Седона на Карте"/>
+          <p><img class="order-image" src="img/map.png" width="1200" height="594" alt="Седона на Карте"/></p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d176173.9221157251!2d-111.98794131029544!3d34.86750077553685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1584036020250!5m2!1sru!2sru" width="1200" height="594" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <div class="form-container">
             <form class="order-form" action="https://echo.htmlacademy.ru" method="post">
               <p class="order-date">
