--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
                 <ul class="reasons-content-list">
                   <li class="reason-content-item">
                     <div class="reason-item-white">
-                      <img class="reason-content-item-icon" src="img/icon-1.svg" alt="Жилье">
+                      <img class="reason-content-item-icon" src="img/icon-1.svg" width="75" height="75" alt="Жилье">
                       <p class="reason-content-item-title-white">Жильё</p>
                       <p class="reason-content-item-text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                     </div>
                   </li>
                   <li class="reason-content-item">
                     <div class="reason-item-white">
-                      <img class="reason-content-item-icon" src="img/icon-3.svg" alt="Еда">
+                      <img class="reason-content-item-icon" src="img/icon-3.svg" width="75" height="75" alt="Еда">
                       <p class="reason-content-item-title-white">Еда</p>
                       <p class="reason-content-item-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                     </div>
                   </li>
                   <li class="reason-content-item">
                     <div class="reason-item-white">
-                      <img class="reason-content-item-icon" src="img/icon-2.svg" alt="Сувениры">
+                      <img class="reason-content-item-icon" src="img/icon-2.svg" width="75" height="75" alt="Сувениры">
                       <p class="reason-content-item-title-white">Сувениры</p>
                       <p class="reason-content-item-text">Не только китайского, но и местного производства</p>
                     </div>
@@ -118,7 +118,7 @@
         <div class="order-container map">
           <h2 class="visually-hidden">Забронировать отель</h2>
           <img class="order-image" src="img/map.png" width="1200" height="594" alt="Седона на Карте"/>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d176173.9221157251!2d-111.98794131029544!3d34.86750077553685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1584036020250!5m2!1sru!2sru" width="1200" height="594" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d176173.9221157251!2d-111.98794131029544!3d34.86750077553685!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1584036020250!5m2!1sru!2sru" width="1200" height="594" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           <div class="form-container">
             <form class="order-form" action="https://echo.htmlacademy.ru" method="post">
               <p class="order-date">
