--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип Седоны">
         </a>
         <ul class="header-navigation">
-          <li><a>Информация</a></li>
+          <li class="info"><a>Информация</a></li>
           <li><a href="photo.html">Фото и видео</a></li>
           <li><a href="map.html">Карта штата</a></li>
           <li><a class="catalog" href="catalog.html">Гостиницы</a></li>
