--- a/catalog.html
+++ b/catalog.html
@@ -75,8 +75,8 @@
                     <div class="scale">
                       <div class="bar"></div>
                     </div>
-                    <div class="range-toggle range-toggle-min" aria-label="toggle-min"></div>
-                    <div class="range-toggle range-toggle-max" aria-label="toggle-max"></div>
+                    <div class="range-toggle range-toggle-min" aria-label="Ползунок цены в меньшую сторону"></div>
+                    <div class="range-toggle range-toggle-max" aria-label="Ползунок цены в большую сторону"></div>
                   </div>
                   <button class="filter-button" type="submit">Показать</button>
                 </div>
