--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <title>HTML Academy:Седона</title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
   <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/normalize.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
 </head>
 <body>
   <header class="main-header">
@@ -178,6 +180,6 @@
       </p>
     </div>
   </footer>
-  <script src="./js/script.js"></script>
+  <script src="./js/script.min.js"></script>
 </body>
 </html>
